--- a/index.html
+++ b/index.html
@@ -3,38 +3,79 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/ex4.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <form action="http://se.shenkar.ac.il/teach/web1/get_form3.php" method="get">
+    <form action="http://se.shenkar.ac.il/teach/web1/get_form3.php" method="get" >
         <h1>join our member club</h1>
-        Full Name <input type="text" name="fullName" class="form-control"  placeholder="my name"><br>
-        Password <input type="password" name="pass"><br>
-        mail <input type="email" name="mail"><br>
-        website <input type="url" name="website"><br>
-        phone <input type="tel" name="phone"><br>
-        enter number of coffee <input type="number" name="coffee"><br>
-        choose temperature <input type="range" name="temper"><br>
-        add you address <textarea name="address"></textarea><br>
-        <h4>Hobbies</h4><br>
-        football <input type="checkbox" name="interests[]" value="football">
-        basketball <input type="checkbox" name="interests[]" value="basketball">
-        8 ball pool <input type="checkbox" name="interests[]" value="8 ball pool"><br>
-        <h4>choose your gender</h4><br>
-        male <input type="radio" name="gender">
-        female <input type="radio" name="gender"><br>
-        <label>age: </label>
-        <select name="age" required>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-        </select>
-        <br>
-        <input type="submit" value="click me">
+        <div class="mb-3">
+            <label class="form-label">Full Name</label>
+            <input type="text" name="fullName" class="form-control"  placeholder="my name">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Password</label>
+            <input type="password" name="pass" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">mail</label>
+            <input type="email" name="mail" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">website</label>
+            <input type="url" name="website" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">phone</label>
+            <input type="tel" name="phone" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">enter number of coffee</label>
+            <input type="number" name="coffee" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">choose temperature</label>
+            <input type="range" name="temper" class="form-range">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">add your address</label>
+            <textarea name="address" class="form-control" rows="3"></textarea>
+        </div>
+        <h4>Hobbies</h4>
+        <div class="form-check form-check-inline">
+            <input type="checkbox" class="form-check-input" name="interests[]" value="football">
+            <label class="form-check-label">football</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input type="checkbox" class="form-check-input" name="interests[]" value="basketball">
+            <label label class="form-check-label">basketball</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input type="checkbox" class="form-check-input" name="interests[]" value="8 ball pool">
+            <label label class="form-check-label">8 ball pool</label>
+        </div>
+        <h4>choose your gender</h4>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="gender">
+            <label class="form-check-label">male</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="gender">
+            <label class="form-check-label">female</label>
+        </div>
+        <div class="mb-3">
+        <label class="form-label">age:</label>
+        <select class="form-select" aria-label="Default select example" name="age">
+            <option selected>choose your age</option>
+          </select>
+        </div>
+        <div class="mb-3">
+        <input type="submit" class="btn btn-outline-secondary" value="click me">
+        </div>
     </form>
 </body>
 </html>
