--- a/index.html
+++ b/index.html
@@ -11,31 +11,48 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="http://se.shenkar.ac.il/teach/web1/get_form3.php" method="get" >
-        <h1>join our member club</h1>
+<div class="container-fluid">
+    <h1>join our member club</h1>
+   
+    <form action="http://se.shenkar.ac.il/teach/web1/get_form3.php" method="get" id="form-ex4" novalidate>
         <div class="mb-3">
             <label class="form-label">Full Name</label>
-            <input type="text" name="fullName" class="form-control"  placeholder="my name">
+            <input type="text" name="fullName" class="form-control" id="fullName">
+            <div class="invalid-feedback">
+                Please provide name with one space at least.
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label">Password</label>
-            <input type="password" name="pass" class="form-control">
+            <input type="password" name="pass" class="form-control" id="password">
+            <div class="invalid-feedback">
+                Please provide password with one capital letter at least and minimum length of 8.
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label">mail</label>
-            <input type="email" name="mail" class="form-control">
+            <input type="email" name="mail" class="form-control" placeholder="name@example.com" id="mail" required>
+            <div class="invalid-feedback">
+                Please provide valid mail.
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label">website</label>
-            <input type="url" name="website" class="form-control">
+            <input type="url" name="website" class="form-control" id="website" required>
+            <div class="invalid-feedback">
+                Please provide valid url.
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label">phone</label>
-            <input type="tel" name="phone" class="form-control">
+            <input type="tel" name="phone" class="form-control" id="phone">
+            <div class="invalid-feedback">
+                Please provide valid phone with numbers only and length of 8 or 9.
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label">enter number of coffee</label>
-            <input type="number" name="coffee" class="form-control">
+            <input type="number" name="coffee" class="form-control" id="coffee">
         </div>
         <div class="mb-3">
             <label class="form-label">choose temperature</label>
@@ -43,39 +60,49 @@
         </div>
         <div class="mb-3">
             <label class="form-label">add your address</label>
-            <textarea name="address" class="form-control" rows="3"></textarea>
+            <textarea name="address" class="form-control" rows="3" id="address"></textarea>
         </div>
-        <h4>Hobbies</h4>
-        <div class="form-check form-check-inline">
-            <input type="checkbox" class="form-check-input" name="interests[]" value="football">
-            <label class="form-check-label">football</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input type="checkbox" class="form-check-input" name="interests[]" value="basketball">
-            <label label class="form-check-label">basketball</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input type="checkbox" class="form-check-input" name="interests[]" value="8 ball pool">
-            <label label class="form-check-label">8 ball pool</label>
-        </div>
-        <h4>choose your gender</h4>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="gender">
-            <label class="form-check-label">male</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="gender">
-            <label class="form-check-label">female</label>
+        <div class="mb-3 is-invalid" id="checkboxes">
+            <h4>Hobbies</h4>
+            <div class="form-check form-check-inline">
+                <input type="checkbox" class="form-check-input" name="interests[]" value="football">
+                <label class="form-check-label">football</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input type="checkbox" class="form-check-input" name="interests[]" value="basketball">
+                <label label class="form-check-label">basketball</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input type="checkbox" class="form-check-input" name="interests[]" value="8 ball pool">
+                <label label class="form-check-label">8 ball pool</label>
+            </div>
+            <div class="invalid-feedback" id="check-note">
+                Please select 3 interests.
+            </div>
+           
         </div>
         <div class="mb-3">
-        <label class="form-label">age:</label>
-        <select class="form-select" aria-label="Default select example" name="age">
-            <option selected>choose your age</option>
-          </select>
+            <h4>choose your gender</h4>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="gender">
+                <label class="form-check-label">male</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="gender">
+                <label class="form-check-label">female</label>
+            </div>
         </div>
         <div class="mb-3">
-        <input type="submit" class="btn btn-outline-secondary" value="click me">
+                <label class="form-label">age:</label>
+                <select class="form-select" name="age" id="select-age">
+                    <option value="">Choose your age</option>
+                </select>
+        </div>
+        <div class="mb-3">
+            <input type="submit" class="btn btn-outline-secondary" value="click me" id="btn-form">
         </div>
     </form>
+    
+</div>
 </body>
 </html>
