--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 <body>
+    
 <div class="container-fluid">
     <h1>join our member club</h1>
-   
     <form action="http://se.shenkar.ac.il/teach/web1/get_form3.php" method="get" id="form-ex4" novalidate>
         <div class="mb-3">
             <label class="form-label">Full Name</label>
@@ -56,7 +56,8 @@
         </div>
         <div class="mb-3">
             <label class="form-label">choose temperature</label>
-            <input type="range" name="temper" class="form-range">
+            <input type="range" name="temper" class="form-range" onchange="displayVal(this.value)">
+            <input type="text" id="val_temp" value="">
         </div>
         <div class="mb-3">
             <label class="form-label">add your address</label>
@@ -100,6 +101,6 @@
         </div>
     </form>
     
-</div>
+    </div>
 </body>
 </html>
