--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="mb-3">
             <label class="form-label">choose temperature</label>
             <input type="range" name="temper" class="form-range" onchange="displayVal(this.value)">
-            <input type="text" id="val_temp" value="">
+            <input type="text" id="val_temp" value="50">
         </div>
         <div class="mb-3">
             <label class="form-label">add your address</label>
